[gd_scene load_steps=9 format=3 uid="uid://c8no1s0yewak"]

[ext_resource type="Script" path="res://globals/dice_roll/dice_roll.gd" id="1_dmy0e"]
[ext_resource type="Texture2D" uid="uid://dqbtag3yfynyl" path="res://assets/ui/dice_roll/dice_roll_bg.png" id="2_13ge6"]
[ext_resource type="FontFile" uid="uid://dmouaewsqx0n2" path="res://assets/fonts/monogram.ttf" id="3_cmg78"]
[ext_resource type="Texture2D" uid="uid://brfvq815v8o7c" path="res://assets/ui/dice_roll/dice.png" id="4_3wq4r"]

[sub_resource type="LabelSettings" id="LabelSettings_d5xlk"]
font = ExtResource("3_cmg78")
font_size = 9
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_15lko"]
font = ExtResource("3_cmg78")
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_fibss"]
atlas = ExtResource("4_3wq4r")
region = Rect2(2.08165e-12, 2.08165e-12, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk0mw"]
atlas = ExtResource("4_3wq4r")
region = Rect2(2.08165e-12, 2.08165e-12, 22, 22)

[node name="CanvasLayer" type="CanvasLayer"]
visible = false
script = ExtResource("1_dmy0e")

[node name="DiceRoll" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DiceRoll"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 0.388235)

[node name="TextureRect" type="TextureRect" parent="DiceRoll"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_13ge6")

[node name="TargetLabel" type="Label" parent="DiceRoll/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 16.0
grow_horizontal = 2
text = "you need >=8"
label_settings = SubResource("LabelSettings_d5xlk")

[node name="RollLabel" type="Label" parent="DiceRoll/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -10.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_15lko")

[node name="HBoxContainer" type="HBoxContainer" parent="DiceRoll/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Dice1" type="TextureRect" parent="DiceRoll/TextureRect/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_fibss")

[node name="Dice2" type="TextureRect" parent="DiceRoll/TextureRect/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_gk0mw")
